fix spacing in the AddBook form

--- a/client/src/stylesheets/_base.scss
+++ b/client/src/stylesheets/_base.scss
@@ -31,6 +31,15 @@ li {
   border: 0.5px solid #0a0a0a;
 }
 
+.input {
+  max-width: 400px;
+  margin-bottom: 1rem;
+}
+
+.button {
+  margin-top: 1rem;
+}
+
 .header {
   margin-bottom: 3rem;
   a {
